# algorisim

./: .gitmodules  CMakeLists.txt  Makefile
src/: best_worst_fit.c  common.c  common.h  main.c  philosophers.c  simulator.h
src/philosophers/: philosophers.c  philosophers.h
src/worst_fit/: worst_fit.c
